Update Travis CI   for Perl 5.26

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: perl
 
 perl:
+ - "5.26"
  - "5.24"
  - "5.22"
  - "5.20"
@@ -9,7 +10,7 @@ perl:
 
 install: true
 
-script: "./bgsound.cgi && ./Hirame_LE.cgi"
+script: "./bgsound.cgi && ./Hirame_LE.cgi && ./IconsEdit.cgi && moe_bbs_adm.cgi" 
 
 
 
